--- a/results.Rmd
+++ b/results.Rmd
@@ -42,7 +42,7 @@ my_df <- readxl::read_xlsx("data/master_list.xlsx", sheet= 2) %>%
 
 ### Research Question 1: How many OA journals have reverse-flipped to a subscription model? 
  
-We identified `r n_distinct(my_df$journal_name)` journals that converted from fully open access to a subscription model, including hybrid open access. While we discovered reverse-flips as early as 2005, the majority of journals `r as.character(min(my_df$year_reverse_flipped, na.rm = TRUE))`. While the earliest reverse flip happened in `r as.character(min(my_df$year_reverse_flipped, na.rm = TRUE))`, the majority of journals changed their business model from 2013 onward (see Figure 3).
+We identified `r n_distinct(my_df$journal_name)` journals that converted from fully open access to a subscription model, including hybrid open access. While we discovered reverse-flips as early as 2005, the majority of journals changed their business model from 2013 onward (see Figure 3).
 
 
 ```{r time, fig.cap= "Number of journals converted from fully open access to a subscription-based business model per year."}
@@ -64,14 +64,14 @@ my_df %>%
 
 #### a) How thoroughly are these journals currently indexed in major bibliometric databases (Web of Science, Scopus, PubMed)?
  
-We investigated the coverage of reverse-flip journals in the following four major bibliographic databases: i) Crossref, a large DOI registration agency for scholarly works, ii) Scopus, iii) Journal Citation Report (JCR) listing journals indexed for the Web of Science, and iv) journals indexed in MEDLINE. This analysis is based at the journal-level by matching ISSN variants. We used the most current journal lists and search indexes from January 2019. 
+We investigated the coverage of reverse-flip journals in the following four major bibliometric databases: Crossref, a large DOI registration agency for scholarly works, Scopus, Journal Citation Report (JCR) listing journals indexed in the Web of Science, and MEDLINE. This analysis is based at the journal-level by matching ISSN variants. We used the most current available journal lists and search indexes at the time of our analysis in January 2019. 
 
 ```{r}
 index_df <- readr::read_csv("data/indexing_coverage.csv")
 ```
 
-In total, we found `r index_df %>% distinct(issn) %>% nrow()` being indexed by at least one bibliometric databases examined, covering `r index_df %>% distinct(issn) %>% nrow() / nrow(my_df) * 100`% of the journals in our study. Figure presents the number of reverse-flip journals that are indexed by each database and the intersection with other databases. 
-Of the `r index_df %>% distinct(issn) %>% nrow()` indexed journals, Crossref and Scopus are the most frequent sources which cover reverse-flip journals. Together with the Web of Science (JCR) they share the largest number of journals (N = `r index_df %>% filter(source %in% c("Scopus", "Crossref", "JCR")) %>% group_by(issn) %>% filter(n() == 3) %>% distinct(issn) %>% nrow()`), of which `r index_df %>% filter(source %in% c("Scopus", "Crossref", "JCR", "MEDLINE")) %>% group_by(issn, source) %>% count() %>% ungroup() %>% group_by(issn) %>% count() %>% filter(nn == 4) %>% nrow()` journals are also covered by MEDLINE.
+In total, we found `r index_df %>% distinct(issn) %>% nrow()` journals that were indexed by at least one bibliometric databases examined, covering `r index_df %>% distinct(issn) %>% nrow() / nrow(my_df) * 100`% of the journals in our study. Figure presents the number of reverse-flip journals that were indexed by each database together with the intersections with the other databases using the UpSet technique (<https://doi.org/10.1093/bioinformatics/btx364>). 
+Of the `r index_df %>% distinct(issn) %>% nrow()` reverse-flip journals, Crossref and Scopus covered most. Together with the Web of Science (JCR) they shared the largest number of journals (N = `r index_df %>% filter(source %in% c("Scopus", "Crossref", "JCR")) %>% group_by(issn) %>% filter(n() == 3) %>% distinct(issn) %>% nrow()`), of which `r index_df %>% filter(source %in% c("Scopus", "Crossref", "JCR", "MEDLINE")) %>% group_by(issn, source) %>% count() %>% ungroup() %>% group_by(issn) %>% count() %>% filter(nn == 4) %>% nrow()` journals were also indexed by MEDLINE.
 
 
 ```{r}
@@ -91,7 +91,7 @@ cr_md %>%
   mutate(average = n / volumes) -> article_volume
 ```
 
-To obtain the journal publication volume, we retrieved the metadata for all articles indexed in Crossref from the year 2000 onwards. Specifically, Crossref provided the metadata for `r n_distinct(cr_md$issn)` out of `r nrow(my_df)` journals (`r n_distinct(cr_md$issn) / nrow(my_df) * 100`% of our sample). Our analysis shows that between 2000 and 2018, these journals published `r nrow(cr_md)` articles, yet the yearly article volume varies considerably (see Figure 4), ranging from `r round(min(article_volume$average),0)` to `r round(max(article_volume$average),0)` with half of the journals publishing `r round(median(article_volume$average),0)` or fewer articles per year (see Table 1). 
+To obtain the journal publication volume, we retrieved the metadata for all articles indexed in Crossref from the year 2000 onwards. Specifically, Crossref provided the metadata for `r n_distinct(cr_md$issn)` out of `r nrow(my_df)` journals (`r n_distinct(cr_md$issn) / nrow(my_df) * 100`% of our sample). Our analysis shows that between 2000 and 2018, these journals published `r nrow(cr_md)` articles, yet the yearly article volume varies considerably (see Figure 4), ranging from `r round(min(article_volume$average),0)` to `r round(max(article_volume$average),0)` with half of the journals publishing `r round(median(article_volume$average),0)` or fewer articles per year. 
 
 ```{r}
 # article_volume %>%
@@ -125,7 +125,7 @@ article_volume %>%
   theme(panel.border=element_blank())
 ```
 
-#### c) Which academic disciplines do the journals belong to?
+#### c) To which academic disciplines do the journals belong to?
 
 ```{r}
 cr_md <- readr::read_csv("data/cr_md.csv", col_types = cols(.default = "c")) %>%
@@ -146,7 +146,7 @@ tmp %>%
   summarise(md = median(n)) -> median_change
 ```  
 
-Table presents a breakdown by top-level discipline, highlighting that reverse flipped journal are not limited to one field, but can be found across various disciplines.
+Table presents a breakdown by top-level discipline, highlighting that reverse flipped journal were not limited to one field, but could be found across various disciplines.
 
 ```{r}
 my_df %>%
@@ -154,34 +154,15 @@ my_df %>%
   mutate(prop = n / sum(n) * 100) %>%
   arrange(desc(prop)) %>%
   rbind(list("Total", nrow(my_df), 100)) %>%
-  knitr::kable(col.names = c("Discipline", "Number of Journals", "Proportion (in%)"), digits = 2, caption = "Breakdown of reverse flip journals by discipline")
-```
-
-```{r}
-my_df %>% 
-  mutate(age_at_time_of_flip = year_reverse_flipped - year_founded) %>%
-#  group_by(issn) %>%
-  summarise(Mean = mean(age_at_time_of_flip),
-            Median = median(age_at_time_of_flip),
-            `Standard Deviation` = sd(age_at_time_of_flip),
-            `Minimum` = min(age_at_time_of_flip),
-            `Maximum` = max(age_at_time_of_flip),
-            `Q1` = quantile(age_at_time_of_flip, 1/4),
-            `Q3` = quantile(age_at_time_of_flip, 3/4)) -> age_df
+  knitr::kable(col.names = c("Discipline", "Reverse-flip Journals", "Proportion (in %)"), digits = 2, caption = "Breakdown of reverse flip journals by discipline")
 ```
 
 
-#### d) How many journals have been associated with scholarly societies or academic institutions?
+#### d) Under which publisher did the reverse-flip occur? Who does currently publish the journals?
 
-Our dataset contains information about whether reverse-flipped journals were related to scholarly societes and academic institutions. We obtained `r my_df %>% filter(society_affiliation == 1 | other_sci_affiliation == 1) %>% nrow()` (`r my_df %>% filter(society_affiliation == 1 | other_sci_affiliation == 1) %>% nrow() / nrow(my_df) * 100` %) reverse-flip journals that were either published together with a scholarly society (N = `r my_df %>% filter(society_affiliation == 1) %>% nrow()`) or at an academic institution (N = `r my_df %>% filter(other_sci_affiliation == 1) %>% nrow()`). 
-
-#### e) Under which publisher did the reverse-flip occur? Who does currently publish the journals?
-
-To investigate the extent of reverse flips across different publishers, we acquired the publisher names for every journal at the time of the reverse flip and for the most current publisher. Table x shows the post-flip and current top  publishers based on the number of journals that were converted from fully OA to subscription access. These six publishers - Elsevier, Springer Nature, Taylor & Francis, De Gruyter, Brill and Wiley - comprised 105 journals at the time of the reverse-flip. 104 reverse-flip journals did belong to the most current journal portfolio investigated. In both cases, these journals represent around 70% of all reverse-flips found. The remaining publishers are categorized as “Other.” The distribution of reverse flips across publishers resembles the general conditions of the scholarly publishing market at-large, which is also dominated by large commercial publishers like Elsevier, Springer Nature, Taylor and Francis, and Wiley.
+To investigate the extent of reverse flips across different publishers, we acquired the publisher names for every journal at the time of the reverse flip and that of the most current volume. Table x shows the post-flip and current top  publishers based on the number of journals that were converted from fully OA to subscription access. These six publishers - Elsevier, Springer Nature, Taylor & Francis, De Gruyter, Brill and Wiley - comprised 105 journals at the time of the reverse-flip and 104 at the time of the most recent volume, representing around 70% of all reverse-flips journals investigated. The remaining publishers are categorized as "Other". The distribution of reverse flips across publishers resembles the general conditions of the scholarly publishing market at-large, which is also dominated by large commercial publishers like Elsevier, Springer Nature, Taylor and Francis, and Wiley.
 
 
-They represent around 70% of all journals in our sample.
- 
 ```{r}
 cr_md <- readr::read_csv("data/cr_md.csv", col_types = cols(.default = "c"))
 cr_md %>%
@@ -241,8 +222,56 @@ publisher_df %>%
   knitr::kable()
 ```
 
+#### e) How many journals have been associated with scholarly societies or academic institutions?
+
+Our dataset contains information about whether reverse-flipped journals were related to scholarly societies and academic institutions. We obtained `r my_df %>% filter(society_affiliation == 1 | other_sci_affiliation == 1) %>% nrow()` (`r my_df %>% filter(society_affiliation == 1 | other_sci_affiliation == 1) %>% nrow() / nrow(my_df) * 100` %) reverse-flip journals that were either published together with a scholarly society (N = `r my_df %>% filter(society_affiliation == 1) %>% nrow()`) or at an academic institution (N = `r my_df %>% filter(other_sci_affiliation == 1) %>% nrow()`). 
+
+Figure presents the extent to which journals were related to scholarly societies or academic institutions at the time of the reverse-flip. It shows that the majority of reverse-flip journals from major publishers were affiliated with professional associations and other research organisations.
+
+```{r}
+my_df %>%
+    mutate(publisher = ifelse(publisher %in% "Brill Academic Publishers", "Brill", publisher)) %>%
+  mutate(publisher = forcats::fct_lump(publisher, 6)) %>%
+  mutate(relation = ifelse(society_affiliation == 0 & other_sci_affiliation == 1, "Institutional", NA)) %>%
+  mutate(relation = ifelse(society_affiliation == 1 & other_sci_affiliation == 0, "Society", relation)) %>%
+   mutate(relation = ifelse(society_affiliation == 0 & other_sci_affiliation == 0, "No relation", relation)) -> society_df
+positions <- rev_pub_count$publisher
+
+ggplot(society_df, aes (publisher, ..count.., 
+                        fill = factor(relation, 
+                                     c("Society", "Institutional", "No relation")))) +
+  geom_bar(position = position_stack(reverse = TRUE)) +
+  coord_flip() +
+  scale_x_discrete(limits = rev(positions)) +
+  scale_fill_manual("Relation",
+                    values = c(
+                      "Society" = "#23445D",
+                      "Institutional" = "#AE4132",
+                      "No relation" = "grey60")) +
+  theme_minimal() +
+  labs(y = "Reverse-flip Journals", x = "Publisher") +
+  theme(plot.margin=margin(30,30,30,30)) +
+  theme(panel.grid.minor=element_blank()) +
+  theme(axis.ticks=element_blank()) +
+  theme(panel.grid.major.y=element_blank()) +
+  theme(panel.border=element_blank()) +
+  theme(legend.position="top")
+```
+
 #### f) How old were the journals at the time of the reverse flip?
 
+```{r}
+my_df %>% 
+  mutate(age_at_time_of_flip = year_reverse_flipped - year_founded) %>%
+#  group_by(issn) %>%
+  summarise(Mean = mean(age_at_time_of_flip),
+            Median = median(age_at_time_of_flip),
+            `Standard Deviation` = sd(age_at_time_of_flip),
+            `Minimum` = min(age_at_time_of_flip),
+            `Maximum` = max(age_at_time_of_flip),
+            `Q1` = quantile(age_at_time_of_flip, 1/4),
+            `Q3` = quantile(age_at_time_of_flip, 3/4)) -> age_df
+```
 
 Table provides summary statistics about the journal age at the year of the reverse flip. Large age differences can be observed, ranging from one year of existences to `r age_df$Maximum` years. Around `r round(filter(my_df, !is.na(year_founded), year_founded < 1990) %>% nrow() / nrow(my_df) * 100)`% (N = `r filter(my_df, !is.na(year_reverse_flipped), year_founded < 1990) %>% nrow()`) of all journals found started before 1990. These findings suggest that not all journals in our sample were born fully open access or online journals, but some might underwent more than one business model change in the course of history.
 
@@ -309,254 +338,4 @@ ggplot(aes(x = factor(age_at_time_of_flip_cat, levels = c("1-5", "6-15", "> 15")
 It seems that for health and life sciences journals (Health) the majority of flips only happened after a period of establishing the journal (>15 years). However, for the physical sciences and mathematics (PSM) as well as the social sciences and humanities (SSH) this process of reconsidering the publishing model seems to have started earlier. For PSM journals about one third already flipped within the first five years of the journal’s lifetime. <!-- Overall, this may have resulted from a somewhat lower degree of acceptance of APC-based open access in these disciplines (add REF)-->
 
 
-
-### Research Question 6: How many of these journals a) had been subscription journals in the past, b) had been APC-based prior to the reverse-flip, and at what price levels, c) are associated with scholarly societies?
-
-We manually checked the past business models of every journal in our sample. As the journal age suggests, not all were born digital and underwent several business changes. In total, around `r round(my_df %>% filter(born_oa == "0") %>% nrow() / nrow(my_df) * 100, 0)`% had been subscription-based in the past. 
-
-```{r}
-my_df %>%
-  mutate(society = ifelse(prev_pub == "-", NA, "Co-published with Society")) %>%
-  ggplot(aes(born_oa, y = ..count..)) +
-  geom_bar() +
-  facet_wrap(~society)
-```
-
-(unsure about how to answer this question using our dataset, help is very much appreciated!)
-
-### Research Question 7:  Is there significant variation in  a) publication volume before and after the reverse flip and b) journal-level citation metrics before and after the reverse flip?
-
-
-```{r}
-cr_md %>%
-  count(issn, year) %>%
-  left_join(my_df, by = c("issn")) %>%
-  filter(!is.na(year_reverse_flipped)) %>%
-  mutate(lag = issued_year - year_reverse_flipped) %>%
-  filter(lag %in% -2:2) -> tmp
-tmp %>% 
-  filter(lag %in% c(-2,2)) %>% 
-  group_by(issn) %>% 
-  filter(n() > 1) %>% 
-  ungroup() %>% 
-  group_by(lag) %>% 
-  summarise(md = median(n)) -> median_change
-```  
-
- To determine the variation in publication volume, we studied all journals that had converted until 2016 and for which Crossref provides article metadata two years before and after the reverse flip. We were able to obtain the publication volume of `r tmp %>%  filter(lag %in% c(-2,2)) %>%  group_by(issn) %>%  filter(n() > 1) %>% group_by(issn) %>% summarise(n_distinct(issn)) %>% nrow()` journals for this five-year period.
- 
-Comparing the yearly article volumes over the period from two years before to two years after the flip reveals little change. The median article volume  increased marginally from `r filter(median_change, lag == -2) %>% .$md` to `r filter(median_change, lag == 2) %>% .$md` articles. Figure illustrates the distribution before and after the flip.
-
-```{r, fig.cap='Density plot of publication volume two years before and after the reverse flip. Dotted line represents the median annual article volume.'}
-tmp %>% 
-  filter(lag %in% c(-2:2)) %>% 
-  group_by(issn) %>% 
-  filter(n() > 4) %>% 
-  mutate(lag = as.factor(lag)) -> tt
-tt %>%
-  ggplot(aes(lag, n, fill = lag)) +
-  geom_boxplot() +
-  coord_cartesian(ylim = 0:400) +
-  xlab("Years since the Reverse Flip") +
-  ylab("Yearly Article Volume") +
-  scale_fill_manual(values = c("#009392","#39b185","#e9e29c","#e88471","#cf597e")) +
-  # remove legend
-  theme_minimal(base_family="Roboto") +
-  theme(plot.margin=margin(30,30,30,30)) +
-  theme(panel.grid.minor=element_blank()) +
-  theme(axis.ticks=element_blank()) +
-  theme(panel.grid.major.x=element_blank()) +
-  theme(panel.border=element_blank()) +
-  guides(fill=FALSE)
-```
-
-There are, however, some cases were article volume increased noticeably. One example is the journal *Meta Gene* launched by Elsevier BV in 2013. Its article volume grew from 86 articles published in the year of the reverse flip (2016) to 201 articles published two years after (2018).
-
-```{r}
-cwts <- readr::read_csv("data/cwts_jn_flipped.csv") 
-# add lag variable
-cwts %>%
-  distinct(issn, Year, .keep_all = TRUE) %>%
-  filter(!is.na(year_reverse_flipped)) %>%
-  mutate(lag = Year - year_reverse_flipped) %>%
-  filter(lag %in% -2:2) -> snip
-snip %>% 
-  # add publisher info
-  left_join(cr_publishers, by = "issn") %>%
-  filter(lag %in% c(-2:2)) %>%
-  group_by(issn) %>% 
-  filter(n() > 4) %>% 
-  mutate(lag = as.factor(lag)) -> tt
-```
-
-To investigate whether the citation impact changed after the journal converted to a toll-access business model, we used the Source Normalized Impact per Paper (SNIP) indicator from the Centre for Science and Technology Studies (CWTS) at Leiden University, matching `r n_distinct(cwts$issn)` journals from our sample.
-Figure illustrates the SNIP distribution of reverse-flip journals two years before and after the conversion. The most recent SNIP values were reported for 2017; accordingly, we only included journals that flipped until 2015 (N = `r n_distinct(tt$issn)`). Our analysis suggests that there is no statistical difference in SNIP values before and after the business model change.
-
-```{r, fig.cap='Development of source normalized impact per paper (SNIP) value between two years before and after the reverse flip. Coordinate system limited to SNIP value 2.5'}
-tt %>%
-  ggplot(aes(lag, SNIP.x, fill = lag)) +
-  geom_boxplot() +
-  coord_cartesian(ylim = 0:2.5) +
-  theme_minimal() +
-  xlab("Years since the reverse flip") +
-  ylab("SNIP") +
-  scale_fill_manual(values = c("#009392","#39b185","#e9e29c","#e88471","#cf597e")) +
-  # remove legend
-  theme_minimal(base_family="Roboto") +
-  theme(plot.margin=margin(30,30,30,30)) +
-  theme(panel.grid.minor=element_blank()) +
-  theme(axis.ticks=element_blank()) +
-  theme(panel.grid.major.x=element_blank()) +
-  theme(panel.border=element_blank()) +
-  guides(fill=FALSE)
-
-```
-
-### Research Question 8: For the subset of journals that now offer hybrid OA, a) what is the difference in the APC before and after the flip among the journals, b) what is the uptake of hybrid OA in these journals, is it above average among hybrid OA journals? 
-
-Table presents the journal business model after the reverse flip. Our analysis shows that around `r round(my_df %>% filter(grepl("Hybrid", oa_model, fixed = FALSE, ignore.case = TRUE)) %>% nrow() / nrow(my_df) * 100, 0)` % (N = `r my_df %>% filter(grepl("Hybrid", oa_model, fixed = FALSE, ignore.case = TRUE)) %>% nrow()`) of the journals offer options to make articles immediately available after a fee was paid, also known as hybrid open access. `r my_df %>% filter(grepl("Subscription", oa_model, fixed = TRUE)) %>% nrow()`  or `r round(my_df %>% filter(grepl("Subscription", oa_model, fixed = TRUE)) %>% nrow() / nrow(my_df) * 100, 0)` % (N = `r my_df %>% filter(grepl("Subscription", oa_model, fixed = TRUE)) %>% nrow()`) journals operated under a subscription-based model only.
-
-```{r}
-my_df %>%
-  mutate(oa_model = gsub("Subscriptions", "Subscription", oa_model)) %>%
-  count(oa_model) %>%
-  mutate(prop  = n / sum(n) * 100) %>% 
-  arrange(desc(prop)) %>%
-  rbind(list("Total", nrow(my_df), 100)) %>%
-  knitr::kable(caption = "Business model of journals after reverse flip", digits = 2, col.names = c("Business model", "Journals", "Proportion"))
-```
-
-
-```{r}
-my_df %>% filter(oa_model == "Hybrid") %>%
-  mutate(
-    `Before Flip` = as.numeric(apc_pre),
-    `After Flip` = as.numeric(apc_post),
-    `Current APC` = as.numeric(apc_now),
-     diff = `After Flip` - `Before Flip`) %>% 
-  filter(!is.na(diff)) %>%
-  select(issn, diff, `Before Flip`, `After Flip`, `Current APC`) %>%
-  gather(3:5, key = "apc_type", value = "apc") %>%
-  filter(apc > 0) %>% 
-  group_by(issn) %>%
-  filter(n() > 2) -> apc_df
-```
-
-We were able to obtain publication fee list prices before and after the flip including the most recent level in 2018 for `r length(unique(apc_df$issn))` journals. Figure compares them with each other, highlighting an considerable increase after the reverse flip.
-
-
-```{r, fig.cap="APC list prices before and after the flip including most current level among reverse-flip journals."}
-apc_df %>% 
-  ggplot(aes(apc_type, apc, fill = apc_type)) +
-  geom_boxplot() +
-  scale_x_discrete(limits = c("Before Flip", "After Flip", "Current APC")) +
-  scale_fill_manual(values = c("#CC6677", "#88CCEE", "#DDCC77")) +
-  theme_minimal() +
-  labs(x = "APC Pricing", y = "List Price") +
-  # remove legend
-  guides(fill=FALSE) +
-  theme_minimal(base_family="Roboto") +
-  theme(plot.margin=margin(30,30,30,30)) +
-  theme(panel.grid.minor=element_blank()) +
-  theme(axis.ticks=element_blank()) +
-  theme(panel.grid.major.x=element_blank()) +
-  theme(panel.border=element_blank())
-```
-
-```{r}
-hybrid <- readr::read_csv("https://github.com/subugoe/hybrid_oa_dashboard/blob/master/data/hybrid_publications.csv?raw=true") 
-my_df %>% 
-  filter(oa_model == "Hybrid") -> apc_df
-hybrid %>%
-  filter(journal_title %in% apc_df$journal_name) %>%
-  distinct(journal_title, issued, yearly_jn_volume, license_ref_n) %>%
-  inner_join(apc_df, by = c("journal_title" = "journal_name")) %>%
-  filter(issued >= year_reverse_flipped) %>%
-  group_by(journal_title) %>%
-  summarise(jn_volume = sum(yearly_jn_volume),
-            hoa = sum(license_ref_n)) %>%
-  mutate(prop = round(hoa/ jn_volume * 100, 2)) -> hybrid_shares
-
-# oapc <- readr::read_csv("https://github.com/subugoe/hybrid_oa_dashboard/blob/master/data/oapc_hybrid.csv?raw=true") %>% 
-#   group_by(country_name, hybrid_type, publisher) %>% 
-#   summarise(n = n())
-# hybrid <- readr::read_csv("https://github.com/subugoe/hybrid_oa_dashboard/blob/master/data/hybrid_publications.csv?raw=true") 
-# my_df %>% 
-#   filter(oa_model == "Hybrid") -> apc_df
-# hybrid %>%
-#   filter(journal_title %in% apc_df$journal_name) %>%
-#  # distinct(journal_title, issued, yearly_jn_volume, license_ref_n) %>%
-#   inner_join(apc_df, by = c("journal_title" = "journal_name")) %>%
-#   filter(issued >= year_reverse_flipped) %>% 
-#   filter(!is.na(hybrid_type)) %>%
-#   group_by(hybrid_type, country_name, publisher.x) %>%
-#   count() %>% 
-#   left_join(oapc, by = c("country_name", "hybrid_type", "publisher.x" = "publisher")) %>%
-#   mutate(prop = round(n.x / n.y * 100,2)) %>%
-#   filter(hybrid_type == "Open APC (Offsetting)") %>%
-#   arrange(desc(n.x)) 
-```
-
-Retrieving open content licenses including start date from Crossref, we were able to obtain `r sum(hybrid_shares$hoa)` articles from `r length(unique(hybrid_shares$journal_title))` that were made available immediately as open access articles in the year or after the reverse flip. They represent `r round(sum(hybrid_shares$hoa) / sum(hybrid_shares$jn_volume) * 100, 2)`% of the total article volume studied.
-
-Using data from the Open APC initiative, we finally checked whether institutions have financed hybrid open access articles in reverse-flipped journals. We found evidence for institutional sponsorship for three individual articles in reverse-flip journals, and as part of a transformative agreement "Springer Compact" offered by Springer Nature to individual institutions and countries. Table summaries the total number of articles in reverse-flip journal that were made openly available under "Springer Compact" agreements, as well as its proportion per transformation contract. Although the proportion these articles is marginally, findings suggest that mechanisms were missing that would have helped institutions to prevent funding of open access publication in reverse-flipped journals.
-
-```{r}
-oapc <- readr::read_csv("https://github.com/subugoe/hybrid_oa_dashboard/blob/master/data/oapc_hybrid.csv?raw=true") %>% 
-   group_by(country_name, hybrid_type, publisher) %>% 
-   summarise(n = n())
-hybrid %>%
-  filter(journal_title %in% apc_df$journal_name) %>%
- # distinct(journal_title, issued, yearly_jn_volume, license_ref_n) %>%
-  inner_join(apc_df, by = c("journal_title" = "journal_name")) %>%
-  filter(issued >= year_reverse_flipped) %>% 
-  filter(!is.na(hybrid_type)) %>%
-  group_by(hybrid_type, country_name, publisher.x) %>%
-  count() %>% 
-  left_join(oapc, by = c("country_name", "hybrid_type", "publisher.x" = "publisher")) %>%
-  mutate(prop = round(n.x / n.y * 100,2)) %>%
-  filter(hybrid_type == "Open APC (Offsetting)") %>%
-  arrange(desc(n.x)) %>%
-  select(-hybrid_type, -publisher.x, Sponsor = country_name, `OA Articles in Reverse Flip Journals` = n.x, `All OA Articles` = n.y, `Proportion (in%)` = prop) %>%
-  knitr::kable()
-```
-
-
-```{r}
-# hybrid oa share from hybrid oa dashboard
-hybrid <- readr::read_csv("https://github.com/subugoe/hybrid_oa_dashboard/blob/master/data/hybrid_publications.csv?raw=true") 
-my_df %>% 
-  filter(oa_model == "Hybrid") -> apc_df
-hybrid %>%
-  filter(journal_title %in% apc_df$journal_name) %>%
-  distinct(journal_title, issued, yearly_jn_volume, license_ref_n) %>%
-  inner_join(apc_df, by = c("journal_title" = "journal_name")) %>%
-  filter(issued >= year_reverse_flipped) %>%
-  group_by(journal_title) %>%
-  summarise(jn_volume = sum(yearly_jn_volume),
-            hoa = sum(license_ref_n)) %>%
-  mutate(prop = round(hoa/ jn_volume * 100, 2)) -> hybrid_shares
-hybrid_shares
-```
-
-
-```{r}
-# backup
-# write_csv(hybrid_shares, "data/hybrid_article_shares.csv")
-# 
-# hybrid <- readr::read_csv("https://github.com/subugoe/hybrid_oa_dashboard/blob/master/data/hybrid_publications.csv?raw=true") 
-# my_df %>% 
-#   filter(oa_model == "Hybrid") -> apc_df
-# hybrid %>%
-#   filter(journal_title %in% apc_df$journal_name) %>%
-#  # distinct(journal_title, issued, yearly_jn_volume, license_ref_n) %>%
-#   inner_join(apc_df, by = c("journal_title" = "journal_name")) %>%
-#   filter(issued >= year_reverse_flipped) %>% 
-#   filter(!is.na(hybrid_type)) %>%
-#   group_by(hybrid_type, country, publisher.x) %>%
-#   summarize(n = n_distinct(doi_oa)) %>%
-#   ggplot(aes(country, n, fill = hybrid_type)) +
-#   geom_bar(stat = "identity") +
-#   facet_wrap((~publisher.x))
-```
 
